edit minio root user

--- a/cluster/apps/default/minio/secret.sops.yaml
+++ b/cluster/apps/default/minio/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    MINIO_ROOT_USER: ENC[AES256_GCM,data:YpbK,iv:ptM2qvFiEdejmsBjza9t7nLaTRHAb+x1WlfXTr4Efwg=,tag:TGtkjgvVsiixZ/X1T9BFzg==,type:str]
+    MINIO_ROOT_USER: ENC[AES256_GCM,data:FBatm0w=,iv:KmHgKVC+HsSDvmF7frbwrj5ZpZjdfTvuwA7eSbv2mMM=,tag:vrwGOkXv+2d5fKcGfO7gXA==,type:str]
     MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:13Vym+ujd5GP2vYjs0Z8QSxWNiOG3jnfEWXxfFHcIBpVFt9EqJdt/H0yR6auPGEhuClE4DUMw4ShAk5bWqaaRC7gdDMvK9RghXzBhbr0kKR2No8QDp2oHAdd3rAaYDhXkz9qjg==,iv:Edn+fv9wMqucAausSgE7HRthxpWVvn8hHgVdZmW7gO0=,tag:3YfWV2hUomKeEEIBITakuA==,type:str]
 sops:
     kms: []
@@ -22,8 +22,8 @@ sops:
             VXZqUkhMRnp1Yk14OEFGSWdEWkFBYmcKObX9My0saHFNEjE+rv+Fh6eqpqWR/k2I
             T3XtadKb++nuBK2slZcY+XrPHDJKd4ONDyUI1CaPcn0wSps/86z/tg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-10-23T22:00:26Z"
-    mac: ENC[AES256_GCM,data:zKNofSbaMIqwXyYOr2qN012MqLDhuz6y+MO8dIoByUVXhjHYSHHSlCV87huIO/kbL5FY1foQYSGJIk1BqVKZpiIe0GY294zkVFg/iI4AEiCWsRi14MmGUDJOURw7J+sT324KPhpd7rOgh9ngkzhg7m3yu4EE5KBOnpxQNfL15yU=,iv:V1yY4OSyw9Vr4tTSqO9x8sSlmVkGdIlC2ngGHNxP3PE=,tag:cv5WuWW1Ml5SCs5fVufx6A==,type:str]
+    lastmodified: "2022-10-24T00:08:09Z"
+    mac: ENC[AES256_GCM,data:RRPGRFNnBT2yvAEz5mbOXGh/m/hVYBxtMuN0kidK+NAYqP+FhOxo1HpE0IDp4VqnUMOz+AvSVD6SN9fj4eR+2DCK295K4HYyZBfC6TYo9QdHKz33RQY4onKylqf0aZirnyiOoOT32IJvrD9bw+xuBxqRKH1vTQNCUaq7F79JTE8=,iv:VLj8RY1luiCh95YZ90tHXwTucmipxg6iiKh6SxsINfE=,tag:vBcac3wBqkC32L6PpGtm4g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
