--- a/cluster/apps/default/navidrome/helm-release.yaml
+++ b/cluster/apps/default/navidrome/helm-release.yaml
@@ -25,8 +25,8 @@ spec:
     namespace: longhorn-system
   values:
     image:
-      repository: ghcr.io/onedr0p/navidrome
-      tag: 0.48.0@sha256:2ff33a7fd75521998683a4e50b490adfad9697c97edd2106b56f835547781de7
+      repository: deluan/navidrome
+      tag: 0.48.0
     env:
       TZ: "${TIMEZONE}"
       ND_DATAFOLDER: /config
