--- a/cluster/apps/default/lidarr/helm-release.yaml
+++ b/cluster/apps/default/lidarr/helm-release.yaml
@@ -39,7 +39,7 @@ spec:
             hajimari.io/enable: "true"
             hajimari.io/icon: "playlist-music"
             traefik.ingress.kubernetes.io/router.entrypoints: websecure
-            traefik.ingress.kubernetes.io/router.middlewares: "auth-chain-authelia-auth@kubernetescrd"
+            traefik.ingress.kubernetes.io/router.middlewares: auth-chain-authelia-auth@kubernetescrd,lidarr-theme@file
             external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
             external-dns/is-public: "true"
           hosts:
