--- a/cluster/apps/default/lidarr/helm-release.yaml
+++ b/cluster/apps/default/lidarr/helm-release.yaml
@@ -31,6 +31,11 @@ spec:
       TZ: "${TIMEZONE}"
       PUID: 0
       PGID: 0
+    service:
+      main:
+        ports:
+          http:
+            port: 8686
     ingress:
         main:
           enabled: true
