minio depends on longhorn not ceph..

--- a/cluster/apps/default/minio/helm-release.yaml
+++ b/cluster/apps/default/minio/helm-release.yaml
@@ -20,8 +20,8 @@ spec:
     remediation:
       retries: 5
   dependsOn:
-    - name: rook-ceph-cluster
-      namespace: rook-ceph
+  - name: longhorn
+    namespace: longhorn-system
   values:
     image:
       repository: quay.io/minio/minio
