--- a/cluster/apps/default/changedetection-io/helm-release.yaml
+++ b/cluster/apps/default/changedetection-io/helm-release.yaml
@@ -11,21 +11,32 @@ spec:
   interval: 15m
   chart:
     spec:
-      chart: changedetection-io
-      version: 1.5.2
+      chart: app-template
+      version: 1.0.1
       sourceRef:
         kind: HelmRepository
-        name: k8s-at-home-charts
+        name: bjw-s
         namespace: flux-system
       interval: 15m
   install:
-    createNamespace: true
+    remediation:
+      retries: 5
+  upgrade:
+    remediation:
+      retries: 5
   values:
     image:
       repository: ghcr.io/dgtlmoon/changedetection.io
       tag: "latest"
     env:
       TZ: "${TIMEZONE}"
+      USE_X_SETTINGS: 1
+      PLAYWRIGHT_DRIVER_URL: ws://change-detection-browser.default.svc.cluster.local:3000/?stealth=1&--disable-web-security=true
+    service:
+      main:
+        ports:
+          http:
+            port: 5000
     ingress:
         main:
           enabled: true
@@ -38,7 +49,7 @@ spec:
             external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
             external-dns/is-public: "true"
           hosts:
-            - host: changedetection-io.${SECRET_PUBLIC_DOMAIN}
+            - host: &host "{{ .Release.Name }}.${SECRET_PUBLIC_DOMAIN}"
               paths:
                 - path: /
                   pathType: Prefix
@@ -49,3 +60,48 @@ spec:
         existingClaim: pvc-changedetection-io
         mountPath: /datastore
         retain: true
+
+---
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
+kind: HelmRelease
+metadata:
+  name: change-detection-browser
+  namespace: default
+spec:
+  interval: 15m
+  chart:
+    spec:
+      chart: app-template
+      version: 1.0.1
+      sourceRef:
+        kind: HelmRepository
+        name: bjw-s
+        namespace: flux-system
+      interval: 15m
+  install:
+    createNamespace: true
+    remediation:
+      retries: 5
+  upgrade:
+    remediation:
+      retries: 5
+  values:
+    image:
+      repository: docker.io/browserless/chrome
+      tag: latest
+    env:
+      SCREEN_WIDTH: 1920
+      SCREEN_HEIGHT: 1024
+      SCREEN_DEPTH: 16
+      ENABLE_DEBUGGER: false
+      PREBOOT_CHROME: true
+      CONNECTION_TIMEOUT: 300000
+      MAX_CONCURRENT_SESSIONS: 10
+      CHROME_REFRESH_TIME: 600000
+      DEFAULT_BLOCK_ADS: true
+      DEFAULT_STEALTH: true
+    service:
+      main:
+        ports:
+          http:
+            port: 3000
