--- a/cluster/apps/default/changedetection-io/helm-release.yaml
+++ b/cluster/apps/default/changedetection-io/helm-release.yaml
@@ -26,7 +26,7 @@ spec:
   values:
     image:
       repository: ghcr.io/dgtlmoon/changedetection.io
-      tag: "latest"
+      tag: 0.39.21.1
     env:
       TZ: "${TIMEZONE}"
       USE_X_SETTINGS: 1
