--- a/provision/ansible/inventory/group_vars/all.yaml
+++ b/provision/ansible/inventory/group_vars/all.yaml
@@ -13,5 +13,5 @@ k3s_token: "Qz9DZfbPtExEabzAer0bHe6TfOJLzJ8I18qmG5VzUoQeC7NuKZ"
 flannel_iface: "eth0"
 
 # change these to your liking, the only required one is--no-deploy servicelb 
-extra_server_args: "--no-deploy servicelb --no-deploy traefik" 
+extra_server_args: "--disable servicelb --disable traefik" 
 extra_agent_args: ""
