--- a/cluster/apps/system-upgrade/system-upgrade-controller/plans/server-plan.yaml
+++ b/cluster/apps/system-upgrade/system-upgrade-controller/plans/server-plan.yaml
@@ -16,4 +16,5 @@ spec:
   serviceAccountName: system-upgrade
   upgrade:
     image: rancher/k3s-upgrade
-  channel: https://update.k3s.io/v1-release/channels/stable
+  # channel: https://update.k3s.io/v1-release/channels/stable
+  version: v1.24.6+k3s1
