--- a/cluster/apps/default/uptime-kuma/helm-release.yaml
+++ b/cluster/apps/default/uptime-kuma/helm-release.yaml
@@ -11,21 +11,47 @@ spec:
   interval: 15m
   chart:
     spec:
-      chart: uptime-kuma
-      version: 1.4.2
+      chart: app-template
+      version: 1.2.0
       sourceRef:
         kind: HelmRepository
-        name: k8s-at-home-charts
+        name: bjw-s-charts
         namespace: flux-system
-      interval: 15m
   install:
-    createNamespace: true
+    remediation:
+      retries: 5
+  upgrade:
+    remediation:
+      retries: 5
   values:
+    hostname: "uptime.${SECRET_PUBLIC_DOMAIN}"
     image:
       repository: louislam/uptime-kuma
       tag: "latest"
     env:
       TZ: "${TIMEZONE}"
+      UPTIME_KUMA_PORT: 3001
+      UPTIME_KUMA_DISABLE_FRAME_SAMEORIGIN: 0
+    service:
+      main:
+        ports:
+          http:
+            port: 3001
+    ingress:
+      main:
+        enabled: true
+        ingressClassName: "traefik"
+        annotations:
+          hajimari.io/enable: "true"
+          hajimari.io/icon: "robot-happy"
+          traefik.ingress.kubernetes.io/router.entrypoints: websecure
+          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
+          external-dns/is-public: "true"
+        hosts:
+          - host: &host "uptime.${SECRET_PUBLIC_DOMAIN}"
+            paths:
+              - path: /
+                pathType: Prefix
     persistence:
       config:
         enabled: true
