--- a/cluster/apps/default/vaultwarden/helm-release.yaml
+++ b/cluster/apps/default/vaultwarden/helm-release.yaml
@@ -11,15 +11,18 @@ spec:
   interval: 15m
   chart:
     spec:
-      chart: vaultwarden
-      version: 5.3.2
+      chart: app-template
+      version: 1.2.0
       sourceRef:
         kind: HelmRepository
-        name: k8s-at-home-charts
+        name: bjw-s-charts
         namespace: flux-system
-      interval: 15m
   install:
-    createNamespace: true
+    remediation:
+      retries: 5
+  upgrade:
+    remediation:
+      retries: 5
   values:
     image:
       repository: vaultwarden/server
