--- a/cluster/apps/default/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/default/zigbee2mqtt/helm-release.yaml
@@ -60,6 +60,24 @@ spec:
               port: null
     securityContext:
       privileged: true
+    service:
+      main:
+        ports:
+            http:
+              port: 8080
+    ingress:
+      enabled: true
+      ingressClassName: "traefik"
+      annotations:
+        traefik.ingress.kubernetes.io/router.entrypoints: websecure
+        traefik.ingress.kubernetes.io/router.middlewares: "auth-chain-authelia-auth@kubernetescrd"
+        external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
+        external-dns/is-public: "true"
+      hosts:
+        - host: &host "{{ .Release.Name }}.${SECRET_PUBLIC_DOMAIN}"
+          paths:
+            - path: /
+              pathType: Prefix
     persistence:
       data:
         enabled: true
