--- a/cluster/apps/default/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/default/zigbee2mqtt/helm-release.yaml
@@ -63,8 +63,8 @@ spec:
     service:
       main:
         ports:
-            http:
-              port: 8080
+          http:
+            port: 8080
     ingress:
       main:
         enbled: true
@@ -75,8 +75,7 @@ spec:
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
           external-dns/is-public: "true"
         hosts:
-          - host: zigbee2mqtt.${SECRET_PUBLIC_DOMAIN}"
-          # - host: &host "{{ .Release.Name }}.${SECRET_PUBLIC_DOMAIN}"
+          - host: &host "{{ .Release.Name }}.${SECRET_PUBLIC_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
