typo in node affinity 🤦

--- a/cluster/apps/default/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/default/zigbee2mqtt/helm-release.yaml
@@ -87,7 +87,7 @@ spec:
             - key: app
               operator: In
               values:
-              - zigbee-controll
+              - zigbee-control
     configMaps:
       settings:
         enabled: true
