--- a/cluster/apps/default/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/default/zigbee2mqtt/helm-release.yaml
@@ -92,27 +92,27 @@ spec:
       settings:
         enabled: true
         data:
-          configuration.yaml: |
-            advanced:
-              homeassistant_discovery_topic: homeassistant
-              homeassistant_status_topic: homeassistant/status
-              last_seen: ISO_8601
-              log_level: info
-              log_output:
-              - console
-              network_key: GENERATE
-            experimental:
-              new_api: true
-            frontend:
-              port: 8080
-            homeassistant: true
-            mqtt:
-              base_topic: zigbee2mqtt
-              include_device_information: true
-              server: mqtt://mosquitto.default.svc.cluster.local:1883
-            permit_join: false
-            serial:
-              port: null
+          # configuration.yaml: |
+          advanced:
+            homeassistant_discovery_topic: homeassistant
+            homeassistant_status_topic: homeassistant/status
+            last_seen: ISO_8601
+            log_level: info
+            log_output:
+            - console
+            network_key: GENERATE
+          experimental:
+            new_api: true
+          frontend:
+            port: 8080
+          homeassistant: true
+          mqtt:
+            base_topic: zigbee2mqtt
+            include_device_information: true
+            server: mqtt://mosquitto.default.svc.cluster.local:1883
+          permit_join: false
+          serial:
+            port: null
 
  # !!! note to future ben, or anyone else !!!
  # trying to get the ConBee to appear as a readable ttyACM0 interface is a nightmare
