--- a/cluster/apps/default/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/default/zigbee2mqtt/helm-release.yaml
@@ -34,7 +34,7 @@ spec:
       ZIGBEE2MQTT_CONFIG_ADVANCED_LAST_SEEN: ISO_8601
       ZIGBEE2MQTT_CONFIG_ADVANCED_LOG_LEVEL: warn
       ZIGBEE2MQTT_CONFIG_ADVANCED_LOG_OUTPUT: '["console"]'
-      ZIGBEE2MQTT_CONFIG_ADVANCED_NETWORK_KEY: '[31, 251, 167, 123, 72, 80, 170, 250, 31, 110, 188, 49, 227, 208, 42, 16]'
+      ZIGBEE2MQTT_CONFIG_ADVANCED_NETWORK_KEY: "[31, 251, 167, 123, 72, 80, 170, 250, 31, 110, 188, 49, 227, 208, 42, 16]"
       ZIGBEE2MQTT_CONFIG_EXPERIMENTAL_NEW_API: "true"
       ZIGBEE2MQTT_CONFIG_FRONTEND_PORT: 8080
       ZIGBEE2MQTT_CONFIG_HOMEASSISTANT: "true"
