--- a/cluster/apps/default/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/default/zigbee2mqtt/helm-release.yaml
@@ -51,14 +51,14 @@ spec:
               - path: /
                 pathType: Prefix
     persistence:
-      config:
-        enabled: true
-        type: "custom"
-        mountPath: "/app/data/configuration.yaml"
-        subPath: "configuration.yaml"
-        volumeSpec:
-          configMap:
-            name: zigbee2mqtt-settings
+      # config:
+      #   enabled: true
+      #   type: "custom"
+      #   mountPath: "/app/data/configuration.yaml"
+      #   subPath: "configuration.yaml"
+      #   volumeSpec:
+      #     configMap:
+      #       name: zigbee2mqtt-settings
       data:
         enabled: true
         storageClass: longhorn
