--- a/cluster/apps/default/home-assistant/postgresql/secret.sops.yaml
+++ b/cluster/apps/default/home-assistant/postgresql/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    password: ENC[AES256_GCM,data:IxVisq5wkJstnHa9187MkPs+eVKOdZfua4F3AhnDnOOFl0p/yyR1lgiZ1CuNZSI42zUOnvI63GQkoisT4VY2kaJk8eZkKVbkGJINp0bbkZPel+3QQnSqpsITH+YLWbipolc=,iv:P8KEH53hV2bt4/Ei0LKskrnMgfP4YwD7DapLmNuqTyE=,tag:81y8Qu1vg1BSBcvcy1iNCQ==,type:str]
+    postgres-password: ENC[AES256_GCM,data:Q9dIxfjo+i//gT888/jogzTA3pqIj8UrsM9jKLO7r3D3TY+qyPz4VbwDEyptAKoV+81DhfjLx5JriBT0OorkxPnYD0bErkAiwrIcPKMQaJskC/hdu5BhksdPZcktq14+Yxk=,iv:nkYm2it7ToL89+2Saupe2So1nwzBernH6dLgxST9hjE=,tag:JLwUJVBWUXj5oCBCc/ekzg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age17r33fln8jyfzrdxshtnv38dmyst33q8g3c2c5f9r8lcvkxa4ggrq07sffm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDWTN1Z0NUd01OaWJYZHIz
-            NUhsMGE1MEtwbVVEcGVsanQrNGc2T3p0b0MwCnkxKzNCVFVXVFBYZEkrQk85SVBl
-            bFhubHlwbGRqeWV0Zy94Sk5CNmZHN0kKLS0tIDZ4VGRjMDY5RkVJQlYveURsSWpQ
-            UlVpYXQ5cjdGQ2RRNUYrUThHMnpodzAKJfGILIEiYSzyLWVouJwKPW9DbQ/pBvGt
-            ghijcz7iAI8PPXc75VqfXfya/yD0uEu2awvO/ttd48qHxrqj1umkWA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCZEU5VUxqbDBySnFPOWx6
+            enJ4dzhhTURiMTJUam5YRlZXTURoTUJwcmswCmFvMXAxUjQrQlk0R1dHalNzSXBo
+            TzJrZER2KzVmdmhBcWE2VTFoU3ZqUE0KLS0tIE0wOWRLSWNlUklvYkNQb3NGT3c2
+            QVBQM0QyY1dhV01GMjBJT3FhWTBiZm8Kdql268nv3+55EWi+sWi6Pb/9EOV5Xm2X
+            cxv3Zs+N/9CpGJoRxEWekFP9VIU13ngSZdPwg2aDvQB+ZGrx986/sQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-06T21:39:51Z"
-    mac: ENC[AES256_GCM,data:Y+f+P+TsLSbTAZxNI9oue4M4tEpa7+cNWkv+7OlM1ZK2HcXW3GO8spVB1sRiD7hexbinqTGjGZzRx80XMC8QkBtTVXiC7zc80i3ISXGMtc1dPjd34BL+1WXsHRikNpZWs4Lss//Sz0WgLHxjRmkKmuPjPVRMa8W/ibcdgv41eaM=,iv:8L9HhSqxsrh5QypN5Rj/0nBSJ7Oh1M3/eE1xqUJn2bc=,tag:ksSLP/07wfbneluULXUu+Q==,type:str]
+    lastmodified: "2023-01-06T21:50:59Z"
+    mac: ENC[AES256_GCM,data:NGlxHtgDFppLzfyo99xAXRagdWKXbd6TVNg79GSxoRv3MR9u51xLlffw/Tf8dLiA7RrwzjdQ+qJyX399Ixq8hPRvUgAG5C9B7wEQ3YuExHU4xKSzzTgegVNrwXdGxjo2NRC+64+tsUX4dZG1ad8ERT8Pj5zDv+Vo9vqG8DgNpgk=,iv:exP4zjAY5ordbQXdbmx4yiwzzbSW2r+O7zJ+LKNQC4g=,tag:LJd3dFECQPR2UGmuu8v9jg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
