forgot postgres requires two passwords

--- a/cluster/apps/default/home-assistant/postgresql/secret.sops.yaml
+++ b/cluster/apps/default/home-assistant/postgresql/secret.sops.yaml
@@ -4,8 +4,10 @@ metadata:
     name: hass-postgresql-secrets
     namespace: default
 type: Opaque
+# seems to need both keys, idk why...
 stringData:
-    postgres-password: ENC[AES256_GCM,data:Q9dIxfjo+i//gT888/jogzTA3pqIj8UrsM9jKLO7r3D3TY+qyPz4VbwDEyptAKoV+81DhfjLx5JriBT0OorkxPnYD0bErkAiwrIcPKMQaJskC/hdu5BhksdPZcktq14+Yxk=,iv:nkYm2it7ToL89+2Saupe2So1nwzBernH6dLgxST9hjE=,tag:JLwUJVBWUXj5oCBCc/ekzg==,type:str]
+    password: ENC[AES256_GCM,data:PbYvoM2/atTbEjVsZ+ifYooSc631/Yz/xo38Ci9KczkSzP53ZU+mm7GSZmbc8pmmOqfq226n9pNZjydM1ytyGTsSQ9RZa1xwFogCNiSNH7cFBekyb9kqP24u8ss1wZQuyWE=,iv:bBTmZT++aNVmWPP3YJkUxAvpNIV1JDcQ7snl464ILko=,tag:1dUEvjiP1iZ6QKkun4Kijg==,type:str]
+    postgres-password: ENC[AES256_GCM,data:vehjjtjYTEbqh7QmojTsefM9Pb78DSEmKU3d97lOzR99pWfVWbS2ZnLQK6QWYHdOPhhsqbD1HodPHkQfUxG5a6eFGfH/+bf4erN+dPMlprSEdw8UagouTSgY64jU/M+ttH4=,iv:unAjFZc+TDdNqPRPX+NhTYJyKiGMxmBVM/rHi9tgOvI=,tag:84omVNVqJWNW+bboofzSEA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +17,14 @@ sops:
         - recipient: age17r33fln8jyfzrdxshtnv38dmyst33q8g3c2c5f9r8lcvkxa4ggrq07sffm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCZEU5VUxqbDBySnFPOWx6
-            enJ4dzhhTURiMTJUam5YRlZXTURoTUJwcmswCmFvMXAxUjQrQlk0R1dHalNzSXBo
-            TzJrZER2KzVmdmhBcWE2VTFoU3ZqUE0KLS0tIE0wOWRLSWNlUklvYkNQb3NGT3c2
-            QVBQM0QyY1dhV01GMjBJT3FhWTBiZm8Kdql268nv3+55EWi+sWi6Pb/9EOV5Xm2X
-            cxv3Zs+N/9CpGJoRxEWekFP9VIU13ngSZdPwg2aDvQB+ZGrx986/sQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIcE8rQzYzQ09pWlJERVNQ
+            Q2R4U1VXT0tlNjIzTlVtN2NxaGR6bUVDYkZRCkhWRTIwTDl3eXhsZ1VEOUJBVU1i
+            NmQrTlJwNjYvT2Y5ZDhRL2o2OHpXZ0kKLS0tIGFIbm1mZGs4V1JkZzVaZTBsSUMw
+            YUl0L0srNDZ5SnNkV2J4U2NvQnZ5SUUK4oXKCaDNxJqxM+ccFbFIKI9RRfSH+wT3
+            rrXS9DOXTsbuZhKaBG7YFVfRrJdN7Inv/0xkoKAau6iLFdSBNEj3nA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-06T21:50:59Z"
-    mac: ENC[AES256_GCM,data:NGlxHtgDFppLzfyo99xAXRagdWKXbd6TVNg79GSxoRv3MR9u51xLlffw/Tf8dLiA7RrwzjdQ+qJyX399Ixq8hPRvUgAG5C9B7wEQ3YuExHU4xKSzzTgegVNrwXdGxjo2NRC+64+tsUX4dZG1ad8ERT8Pj5zDv+Vo9vqG8DgNpgk=,iv:exP4zjAY5ordbQXdbmx4yiwzzbSW2r+O7zJ+LKNQC4g=,tag:LJd3dFECQPR2UGmuu8v9jg==,type:str]
+    lastmodified: "2023-01-06T22:02:17Z"
+    mac: ENC[AES256_GCM,data:swJkQhsVIO7A3oUcU+PaM4WJq7/0YuM+CXNrPd9ne49hqdAG+n05PbQOSzIwLF+EXLgmNSSnhOsPo7baUuQSuGhXfCsTnW9hTWzpr7hqf/oXd2Mp9tLsfIaEEO6nY5wbCetgAwLRDjb9Ixl4qzKneNTFWDEdey4FLQgAZDSZAkg=,iv:FObqVhCc205cMXJSMa5BxNho7mGcxPUqYYWSET41mAE=,tag:MNYz/coFTv1xDn6hXjggVQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
