trying to figure out why env var isnt being passed

--- a/cluster/apps/default/home-assistant/helm-release.yaml
+++ b/cluster/apps/default/home-assistant/helm-release.yaml
@@ -33,7 +33,7 @@ spec:
         valueFrom:
           secretKeyRef:
             name: hass-postgresql-secrets
-            key: postgres-password
+            key: password
     ingress:
         main:
           enabled: true
