--- a/cluster/apps/default/home-assistant/helm-release.yaml
+++ b/cluster/apps/default/home-assistant/helm-release.yaml
@@ -65,8 +65,8 @@ spec:
       codeserver:
         enabled: true
         image:
-          repository: ghcr.io/coder/code-server
-          tag: v4.9.1
+          repository: lscr.io/linuxserver/code-server
+          tag: "4.9.1"
         env:
           TZ: "${TIMEZONE}"
           workingDir: "/config"
