--- a/cluster/apps/default/plex/helm-release.yaml
+++ b/cluster/apps/default/plex/helm-release.yaml
@@ -48,7 +48,7 @@ spec:
         annotations:
           hajimari.io/enable: "true"
           hajimari.io/icon: "plex"
-          traefik.ingress.kubernetes.io/router.middlewares: plex-theme@file
+          # traefik.ingress.kubernetes.io/router.middlewares: plex-theme@file
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
           external-dns/is-public: "true"
