--- a/cluster/apps/default/radarr/helm-release.yaml
+++ b/cluster/apps/default/radarr/helm-release.yaml
@@ -43,7 +43,7 @@ spec:
         annotations:
           hajimari.io/enable: "true"
           hajimari.io/icon: "movie"
-          traefik.ingress.kubernetes.io/router.middlewares: auth-chain-authelia-auth@kubernetescrd,radarr-theme@file
+          traefik.ingress.kubernetes.io/router.middlewares: auth-chain-authelia-auth@kubernetescrd #,radarr-theme@file
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
           external-dns/is-public: "true"
