--- a/cluster/apps/default/sabnzbd/helm-release.yaml
+++ b/cluster/apps/default/sabnzbd/helm-release.yaml
@@ -42,7 +42,7 @@ spec:
         annotations:
           hajimari.io/enable: "true"
           hajimari.io/icon: "download-box"
-          traefik.ingress.kubernetes.io/router.middlewares: auth-chain-authelia-auth@kubernetescrd,sabnzbd-theme@file
+          traefik.ingress.kubernetes.io/router.middlewares: auth-chain-authelia-auth@kubernetescrd #,sabnzbd-theme@file
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
           external-dns/is-public: "true"
