change flannel interface for kubevip

--- a/cluster/config/cluster-settings.yaml
+++ b/cluster/config/cluster-settings.yaml
@@ -12,7 +12,7 @@ data:
   UNIFI_IP: "10.93.149.58"
   OCTOPRINT_IP: "10.93.149.56"
   TIMEZONE: "Pacific/Auckland"
-  FLANNEL_IFACE: "eth0"
+  FLANNEL_IFACE: "enp88s0"
   APISERVER_ENDPOINT: "10.87.42.0"
   TRAEFIK_ENDPOINT: "10.87.42.10"
   PIHOLE_ENDPOINT: "10.87.42.11"
