--- a/cluster/apps/system-upgrade/system-upgrade-controller/plans/server-plan.yaml
+++ b/cluster/apps/system-upgrade/system-upgrade-controller/plans/server-plan.yaml
@@ -17,4 +17,5 @@ spec:
   upgrade:
     image: rancher/k3s-upgrade
   # renovate: datasource=github-releases depName=k3s-io/k3s
-  version: "v1.26.1+k3s1"
+  # version: "v1.26.1+k3s1"
+  version: "v1.25.6+k3s1"
