make mosquitto accessible in lan

--- a/cluster/config/cluster-settings.yaml
+++ b/cluster/config/cluster-settings.yaml
@@ -15,3 +15,4 @@ data:
   PIHOLE_ENDPOINT: "10.87.42.11"
   PLEX_ENDPOINT: "10.87.42.12"
   METALLB_LB_RANGE: "10.87.42.10-10.87.42.20"
+  MOSQUITTO_UP: "10.87.42.13"
