--- a/cluster/apps/default/mosquitto/helm-release.yaml
+++ b/cluster/apps/default/mosquitto/helm-release.yaml
@@ -11,11 +11,11 @@ spec:
   interval: 15m
   chart:
     spec:
-      chart: mosquitto
-      version: 4.8.2
+      chart: app-template
+      version: 1.3.2
       sourceRef:
         kind: HelmRepository
-        name: k8s-at-home-charts
+        name: bjw-s
         namespace: flux-system
       interval: 15m
   install:
@@ -26,3 +26,20 @@ spec:
       tag: 2.0.15
     env:
       TZ: "${TIMEZONE}"
+    service:
+      main:
+        type: LoadBalancer
+        externalIPs: ["${MOSQUITTO_IP}"]
+        externalTrafficPolicy: Local
+        ports:
+          http:
+            enabled: false
+          mqtt:
+            enabled: true
+            port: 1883
+    resources:
+      requests:
+        cpu: 10m
+        memory: 50Mi
+      limits:
+        memory: 150Mi
