--- a/cluster/apps/default/mosquitto/helm-release.yaml
+++ b/cluster/apps/default/mosquitto/helm-release.yaml
@@ -29,7 +29,8 @@ spec:
     service:
       main:
         type: LoadBalancer
-        externalIPs: ["${MOSQUITTO_IP}"]
+        annotations:
+          metallb.universe.tf/loadBalancerIPs: ${MOSQUITTO_IP}
         externalTrafficPolicy: Local
         ports:
           http:
